Firebase Integration + Redux Fetch

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    //compile project(':react-native-maps')
+    compile project(':react-native-fetch-blob')
     //compile project(':react-native-maps')
     compile project(':react-native-lock')
     compile fileTree(dir: "libs", include: ["*.jar"])
