--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "firebase": "^3.3.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "15.2.1",
-    "react-native": "0.31.0",
+    "react-native": "^0.30.0",
     "react-native-action-button": "^1.1.11",
+    "react-native-fetch-blob": "^0.9.4-beta.1",
     "react-native-fs": "^2.0.1-rc.2",
     "react-native-lock": "^0.3.0",
     "react-native-maps": "^0.7.1",
