--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "firebase": "^3.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.1.0",
     "react": "15.2.1",
     "react-native": "^0.30.0",
     "react-native-action-button": "^1.1.11",
@@ -17,6 +18,7 @@
     "react-native-maps": "^0.7.1",
     "react-native-record-sound": "^1.2.6",
     "react-native-scrollable-tab-view": "^0.5.3",
+    "react-native-sound": "^0.8.3",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
